# local-slide-restoration

./: .gitignore  AGENTS.md  README.md  comfy_restore.py  pyproject.toml  run.sh  run_pipeline.sh  setup_bazzite.sh  setup_comfyui.sh  setup_pipeline.sh  slide_pipeline.py
.github/: dependabot.yml
.github/workflows/: quality.yml
tests/: test_comfy_restore.py  test_slide_pipeline.py
tools/: build_comfy_workflow.py
workflows/: photo_restoration_prompt.txt  photo_restoration_qwen_2511.json  photo_restoration_qwen_2511_api.json
