[project]
name = "local-slide-restoration"
version = "1.0.0"
description = "A guarded local restoration pipeline for scanned photographic slides on Apple Silicon"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "diffusers>=0.33.1",
    "einops>=0.8.1",
    "gguf>=0.17.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0,<3",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0",
    "peft>=0.17.0",
    "piexif>=1.1.3,<2",
    "pillow>=11,<13",
    "psutil>=7.0.0",
    "rotary-embedding-torch>=0.5.3",
    "safetensors>=0.5.0",
    "scikit-image>=0.24,<1",
    "torch>=2.13.0,<2.14",
    "torchvision>=0.28.0,<0.29",
    "tqdm>=4.67.0",
]

[tool.uv]
package = false
