[project]
name = "local-slide-restoration"
version = "1.0.0"
description = "A guarded local restoration pipeline for scanned slides on Apple Silicon and Bazzite CUDA"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "diffusers>=0.33.1",
    "einops>=0.8.1",
    "gguf>=0.17.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0,<3",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0",
    "peft>=0.17.0",
    "piexif>=1.1.3,<2",
    "pillow>=11,<13",
    "psutil>=7.0.0",
    "rotary-embedding-torch>=0.5.3",
    "safetensors>=0.5.0",
    "scikit-image>=0.24,<1",
    "torch>=2.13.0,<2.14",
    "torchvision>=0.28.0,<0.29",
    "tqdm>=4.67.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "coverage>=7.10,<8",
    "numpy>=2.2,<3",
    "opencv-python-headless>=4.11",
    "pillow>=11,<13",
    "pip-audit>=2.9,<3",
    "pytest>=8.4,<10",
    "pytest-cov>=6.2,<8",
    "ruff>=0.12,<1",
    "scikit-image>=0.24,<1",
    "ty>=0.0.11,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "PTH", "RUF"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["slide_pipeline"]

[tool.coverage.report]
fail_under = 35
show_missing = true
